fixing alignment + font issues

--- a/contactStyle.css
+++ b/contactStyle.css
@@ -15,3 +15,7 @@ a:hover{
 
    color: #642226; 
 }
+
+#top{
+    text-align: center;
+}
